WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219999
REGRESSION: [ BigSur ] 3 PictureInPicture related API tests timing out
https://bugs.webkit.org/show_bug.cgi?id=219999
Summary
REGRESSION: [ BigSur ] 3 PictureInPicture related API tests timing out
Jer Noble
Reported
2020-12-17 16:40:27 PST
REGRESSION: [ BigSur ] 3 PictureInPicture related API tests timing out
Attachments
Patch
(7.34 KB, patch)
2020-12-17 16:47 PST
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.23 KB, patch)
2020-12-17 16:53 PST
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.23 KB, patch)
2020-12-17 17:01 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.23 KB, patch)
2020-12-17 18:48 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-12-17 16:47:23 PST
Created
attachment 416481
[details]
Patch
Jer Noble
Comment 2
2020-12-17 16:53:20 PST
Created
attachment 416483
[details]
Patch
Jer Noble
Comment 3
2020-12-17 17:01:44 PST
Created
attachment 416485
[details]
Patch
Jer Noble
Comment 4
2020-12-17 18:48:30 PST
Created
attachment 416487
[details]
Patch for landing
EWS
Comment 5
2020-12-17 20:45:46 PST
Committed
r270963
: <
https://trac.webkit.org/changeset/270963
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416487
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-12-17 20:46:47 PST
<
rdar://problem/72453228
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug