REGRESSION: [ BigSur ] 3 PictureInPicture related API tests timing out https://bugs.webkit.org/show_bug.cgi?id=219999

Reviewed by Eric Carlson.

Not a fix for the timeout itself, but a change which will allow us to see the Util::run() statement which
is timing out. Rather than just get a generic TIMEOUT result with no clue to the cause, a Util::run() statement
which takes longer than the specified amount of time will generate an ASSERT() error with the line number
which caused the timeout.

* TestWebKitAPI/Tests/WebKitCocoa/ExitFullscreenOnEnterPiP.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKitCocoa/ExitPiPOnSuspendVideoElement.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:
(TEST):
* TestWebKitAPI/Utilities.h:
* TestWebKitAPI/cocoa/UtilitiesCocoa.mm:
(TestWebKitAPI::Util::runFor):


Canonical link: https://commits.webkit.org/232585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270963 268f45cc-cd09-0410-ab3c-d52691b4dbfc