Tools/TestWebKitAPI/Tests/WebKitCocoa/ExitPiPOnSuspendVideoElement.mm
@@ -73,13 +73,13 @@ TEST(PictureInPicture, ExitPiPOnSuspendVideoElement)
 
     didEnterPiP = false;
     [webView evaluateJavaScript:@"document.getElementById('enter-pip').click()" completionHandler: nil];
-    TestWebKitAPI::Util::run(&didEnterPiP);
+    ASSERT_TRUE(TestWebKitAPI::Util::runFor(&didEnterPiP, 10));
 
     sleep(1_s);
 
     didExitPiP = false;
     [webView synchronouslyLoadHTMLString:@"<body>Hello world</body>"];
-    TestWebKitAPI::Util::run(&didExitPiP);
+    ASSERT_TRUE(TestWebKitAPI::Util::runFor(&didExitPiP, 10));
 }
 
 } // namespace TestWebKitAPI
